--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/index.html
@@ -1,14 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Aviator Watches</title>
     <link rel="stylesheet" href="dist/style.css">
+    <script src="dist/index.js" defer></script>
 </head>
+
 <body>
-    
-    <script src="dist/index.js"></script>
+    <div class="header">
+        <div class="header__wrapper">
+            <div class="header__wrapper__item">CONTACT US</div>
+            <div class="header__wrapper__item">+972-545123456</div>
+            <div class="header__wrapper__item">ISRAEL (USD)</div>
+            <div class="header__wrapper__item">EN</div>
+        </div>
+        <div class="header__wrapper">
+            <div class="header__wrapper__item">FAV</div>
+            <div class="header__wrapper__item">ACCOUNT</div>
+            <div class="header__wrapper__item">CART</div>
+        </div>
+    </div>
+    <div class="nav-bar">
+        <div class="nav-bar__item">WATCHES</div>
+        <div class="nav-bar__item">BRAND</div>
+        <div class="nav-bar__item">POINTS OF SALE</div>
+        <div class="nav-bar__item">CUSTOMER SERVICE</div>
+        <div class="nav-bar__item">SEARCH</div>
+    </div>
+    <div class="filter-bar">
+        <div class="filter-bar__item">All Watches</div>
+        <div class="filter-bar__item">Group</div>
+        <div class="filter-bar__item">Collection</div>
+        <div class="filter-bar__item">function</div>
+        <div class="filter-bar__item">Movement</div>
+        <div class="filter-bar__item">Case</div>
+        <div class="filter-bar__item">Diameter</div>
+        <div class="filter-bar__item">Dial</div>
+        <div class="filter-bar__item">Bracelet</div>
+        <div class="filter-bar__item">Sort by</div>
+    </div>
+    <div class="main">
+        <div class="main__category-wrapper">
+            <div class="main__category-wrapper__title">AIRCOBRA P45</div>
+            <div class="main__category-wrapper__card">
+                <img src="https://aviatorwatch.swiss/assets/catalog/airacobra-p45-chrono/AVIATOR-WATCH--AIRACOBRA-P45-CHRONO--V.2.25.8.172.4-w_680.jpg">
+                <div class="main__category-wrapper__name">AirCobra P45 Chrono Quartz</div>
+                <div class="main__category-wrapper__price">595</div>
+
+            </div>
+            <div class="main__category-wrapper__card">
+                <img src="https://aviatorwatch.swiss/assets/catalog/douglas-day-date/AVIATOR-WATCH--DOUGLAS-DAY-DATE--V.3.20.0.141.4-w_680.jpg">
+                <div class="main__category-wrapper__name">AirCobra P45 Chrono Quartz</div>
+                <div class="main__category-wrapper__price">595</div>
+
+            </div>
+            <div class="main__category-wrapper__card">
+                <img src="https://aviatorwatch.swiss/assets/catalog/douglas-moonflight/AVIATOR-WATCH--DOUGLAS-MOONFLIGHT--V.1.33.0.257.4-w_680.jpg">
+                <div class="main__category-wrapper__name">AirCobra P45 Chrono Quartz</div>
+                <div class="main__category-wrapper__price">595</div>
+
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
