--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/index.html
@@ -12,6 +12,7 @@
         rel="stylesheet">
     <link rel="shortcut icon" sizes="16x16" type="image/x-icon"
         href="http://www.fusushi.co.il/warehouse/dynamic/50900.png">
+    <script src="https://kit.fontawesome.com/e87667ff79.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="dist/style.css">
     <title>Fu - Sushi Restaurant in Tel-Aviv</title>
 </head>
@@ -19,20 +20,29 @@
 <body>
 
     <section class='home'>
-        <nav class="navbar">
-            <ul>
-                <li>Home</li>
-                <li>About Us</li>
-                <li>Order Online</li>
-                <li>Table Reservation</li>
-                <li class='fulogo'><img src="http://en.fusushi.co.il/warehouse/dynamic/55246.png" alt=""></li>
-                <li>Menus</li>
-                <li>Gallery</li>
-                <li>Contact US</li>
-                <li>Gift Card</li>
-                <li>***ICONS***</li>
-            </ul>
-        </nav>
+        <div class="homeopacity">
+            <nav class="navbar">
+                <ul>
+                    <li>Home</li>
+                    <li>About Us</li>
+                    <li>Order Online</li>
+                    <li>Table Reservation</li>
+                    <li class='fulogo'><img src="http://en.fusushi.co.il/warehouse/dynamic/55246.png" alt=""></li>
+                    <li>Menus</li>
+                    <li>Gallery</li>
+                    <li>Contact US</li>
+                    <li>Gift Card</li>
+                    <li><i class="fab fa-facebook"></i><i class="fab fa-instagram"></i></li>
+                </ul>
+            </nav>
+
+            <div class="footer__whatsapp">
+                <a href="https://api.whatsapp.com/send/?phone=%2B972502671666&amp;text&amp;app_absent=0"
+                    target="_blank"><img src="/warehouse/dynamic/168411.png" alt="צ'אט עם המסעדה" draggable="false"></a>
+            </div>
+        </div>
+
+       
     </section>
 
     <section class='lobby'>
