--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/index.html
@@ -36,13 +36,19 @@
                 </ul>
             </nav>
 
-            <div class="footer__whatsapp">
-                <a href="https://api.whatsapp.com/send/?phone=%2B972502671666&amp;text&amp;app_absent=0"
-                    target="_blank"><img src="/warehouse/dynamic/168411.png" alt="צ'אט עם המסעדה" draggable="false"></a>
-            </div>
-        </div>
+            <H1 class="home__title">ASIAN KITCHEN & SUSHI BAR</H1>
 
-       
+            <div class="footer">
+                <div class="footer__whatsapp">
+                    <p>Chat with the restaurant</p>
+                    <img src="img/whatsapp.png" alt='chat with restaurant' draggable="false">
+                </div>
+                <div class="footer__gift">
+                    <img src="img/gift.svg" alt="gift card">
+                </div>
+
+            </div>
+
     </section>
 
     <section class='lobby'>
