--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/index.html
@@ -20,7 +20,7 @@
 
         </div>
     </div>
-    <div class='filter_bar' style="display: flex;gap: 5px;margin-bottom: 10px; justify-content:center;">
+    <div class='filter_bar' style="display: flex;gap: 5px;margin-bottom: 10px; justify-content:center;background-color: rgb(248, 248, 248);">
         <form onsubmit="handlesortitem(event)" class='filter_bar__item'>
             <input type="submit" value="sort up">
         </form>
