--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/index.html
@@ -35,7 +35,7 @@
         <div class="filter-bar__item">All Watches</div>
         <div class="filter-bar__item">Group</div>
         <div class="filter-bar__item">Collection</div>
-        <div class="filter-bar__item">function</div>
+        <div class="filter-bar__item">Function</div>
         <div class="filter-bar__item">Movement</div>
         <div class="filter-bar__item">Case</div>
         <div class="filter-bar__item">Diameter</div>
@@ -43,6 +43,79 @@
         <div class="filter-bar__item">Bracelet</div>
         <div class="filter-bar__item">Sort by</div>
     </div>
+
+    <div class="filter-dropbar">
+        <div class="filter-dropbar__group"></div>
+        <div class="filter-dropbar__group">
+            <p>AUTOMATIC WATCHES</p>
+            <p>CLASSIC WATCHES</p>
+            <p>LADIES WATCHES</p>
+            <p>MANS WATCHES</p>
+            <p>MILITRY WATCHES</p>
+            <p>NEW RELEASES</p>
+            <p>SPORT WATCHES</p>
+        </div>
+        <div class="filter-dropbar__group">
+            <p>AIRCOBRA</p>
+            <p>BRISTOL</p>
+            <p>DOUGLAS</p>
+            <p>MIG</p>
+            <p>MOONFLIGHT</p>
+        </div>
+        <div class="filter-dropbar__group">
+            <p>Chronograph</p>
+            <p>Day / Date</p>
+            <p>Moonphase</p>
+            <p>Oversized Date</p>
+            <p>Small Second</p>
+        </div>
+        <div class="filter-dropbar__group">
+            <p>Automatic</p>
+            <p>Quartz</p>
+        </div>
+        <div class="filter-dropbar__group">
+            <p>Black PVD</p>
+            <p>Brown PVD</p>
+            <p>Gold PVD</p>
+            <p>Grey PVD</p>
+            <p>Rose Gold PVD</p>
+            <p>Stainless Steel</p>
+        </div>
+        <div class="filter-dropbar__group">
+            <p>36 mm</p>
+            <p>41.20 mm</p>
+            <p>42 mm</p>
+            <p>45 mm</p>
+            <p>46 mm</p>
+            <p>47 mm</p>
+        </div>
+        <div class="filter-dropbar__group">
+            <p>Beige</p>
+            <p>Black</p>
+            <p>Blue</p>
+            <p>Brown</p>
+            <p>Green</p>
+            <p>Grey</p>
+            <p>Ivory</p>
+            <p>Pink</p>
+            <p>Red</p>
+            <p>Rose Gold</p>
+            <p>Rose Taupe</p>
+            <p>Silver</p>
+            <p>White</p>
+        </div>
+        <div class="filter-dropbar__group">
+            <p>Leather</p>
+            <p>Rubber</p>
+            <p>Steel</p>
+        </div>
+        <div class="filter-dropbar__group">
+            <p>Bestseller</p>
+            <p>Highest price</p>
+            <p>Lowest price</p>
+        </div>
+    </div>
+
     <div class="main">
         <div class="main__category-wrapper">
             <div class="main__category-wrapper__title">AIRCOBRA P45</div>
