--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/index.html
@@ -32,7 +32,7 @@
                     <li>Gallery</li>
                     <li>Contact US</li>
                     <li>Gift Card</li>
-                    <li><i class="fab fa-facebook"></i><i class="fab fa-instagram"></i></li>
+                    <li class='smedia'><i class="fab fa-facebook"></i><i class="fab fa-instagram"></i></li>
                 </ul>
             </nav>
 
@@ -41,7 +41,11 @@
             <div class="footer">
                 <div class="footer__whatsapp">
                     <p>Chat with the restaurant</p>
-                    <img src="img/whatsapp.png" alt='chat with restaurant' draggable="false">
+                    <div class="wapic"><img src="img/whatsapp.png" alt='chat with restaurant' draggable="false"></div>
+                </div>
+                <div class="footer__arrowpics">
+                    <div class="footer__arrowpics__pics"><i class="far fa-circle"></i><i class="far fa-circle"></i><i class="far fa-circle"></i></div>
+                    <div class="footer__arrowpics__arrow"><i class="fas fa-chevron-down"></i></div>
                 </div>
                 <div class="footer__gift">
                     <img src="img/gift.svg" alt="gift card">
