--- a/תרגול/30.01.22/index.html
+++ b/תרגול/30.01.22/index.html
@@ -9,7 +9,23 @@
 </head>
 
 <body>
+    <div>
+        <div class="price">5</div>
+        <div class="price">15</div>
+        <div class="price">25</div>
+        <div class="price">10</div>
+        <div class="price">70</div>
+        <div class="price">15</div>
+        <div class="price">80</div>
+        <div class="price">70</div>
+        <div class="price">70</div>
+        <div class="price">70</div>
+    </div>
 
+    <div class="date">1.2.2021</div>
+    <div class="dateNew"></div>
+
+    <script src="./dist/index.js"></script>
 </body>
 
 </html>
