--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/index.html
@@ -44,7 +44,8 @@
                     <div class="wapic"><img src="img/whatsapp.png" alt='chat with restaurant' draggable="false"></div>
                 </div>
                 <div class="footer__arrowpics">
-                    <div class="footer__arrowpics__pics"><i class="far fa-circle"></i><i class="far fa-circle"></i><i class="far fa-circle"></i></div>
+                    <div class="footer__arrowpics__pics"><i class="far fa-circle"></i><i class="far fa-circle"></i><i
+                            class="far fa-circle"></i></div>
                     <div class="footer__arrowpics__arrow"><i class="fas fa-chevron-down"></i></div>
                 </div>
                 <div class="footer__gift">
@@ -56,8 +57,27 @@
     </section>
 
     <section class='lobby'>
-
-
+        <div class="lobbydescription">
+            <h2>About Us</h2>
+            <p>Welcome to FU sushi bar, where every dish is prepared to perfection. Enjoy Tel Aviv's energetic vibe in
+                our unique ambiance. Whether you are on a date, out with friends or just have a nighttime craving for
+                excellent sushi, FU is the ultimate place to be. We are open daily from 12:00 p.m to 0:00 a.m. and would
+                be happy to see you among our guests.</p>
+        </div>
+        <div class="lobbyimages">
+            <div class="lobbyimages__box">
+                <div class="lobbyimages__box__image">
+                    <img src="img/giftcard.jpg" alt="giftcard">
+                </div>
+                <p>Gift card</p>
+            </div>
+            <div class="lobbyimages__box">
+                <div class="lobbyimages__box__image">
+                    <img src="img/delivery.jpg" alt="delivery">
+                </div>
+                <p>Order online</p>
+            </div>
+        </div>
     </section>
 
     <section class='menu'>
