--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/index.html
@@ -10,6 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:ital,wght@0,200;1,300&family=The+Nautigal&family=VT323&family=Zen+Kurenaido&display=swap"
         rel="stylesheet">
+
     <link rel="shortcut icon" sizes="16x16" type="image/x-icon"
         href="http://www.fusushi.co.il/warehouse/dynamic/50900.png">
     <script src="https://kit.fontawesome.com/e87667ff79.js" crossorigin="anonymous"></script>
@@ -57,22 +58,22 @@
     </section>
 
     <section class='lobby'>
-        <div class="lobbydescription">
+        <div class="lobby__description">
             <h2>About Us</h2>
             <p>Welcome to FU sushi bar, where every dish is prepared to perfection. Enjoy Tel Aviv's energetic vibe in
                 our unique ambiance. Whether you are on a date, out with friends or just have a nighttime craving for
                 excellent sushi, FU is the ultimate place to be. We are open daily from 12:00 p.m to 0:00 a.m. and would
                 be happy to see you among our guests.</p>
         </div>
-        <div class="lobbyimages">
-            <div class="lobbyimages__box">
-                <div class="lobbyimages__box__image">
+        <div class="lobby__images">
+            <div class="lobby__images__box">
+                <div class="lobby__images__box__image">
                     <img src="img/giftcard.jpg" alt="giftcard">
                 </div>
                 <p>Gift card</p>
             </div>
-            <div class="lobbyimages__box">
-                <div class="lobbyimages__box__image">
+            <div class="lobby__images__box">
+                <div class="lobby__images__box__image">
                     <img src="img/delivery.jpg" alt="delivery">
                 </div>
                 <p>Order online</p>
