--- a/02-JavaScript/09-formsAndObjects/HW/noa/zap/zap.html
+++ b/02-JavaScript/09-formsAndObjects/HW/noa/zap/zap.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Zap</title>
     <link rel="stylesheet" href="dist/zap.css">
 </head>
 
@@ -23,8 +23,8 @@
     </form>
     <div class="sort">
         <P class="text">sort price</P>
-        <button id="lowToHigh" >low to high</button>
-        <button id="highToLow" >high to low</button>
+        <button id="lowToHigh" onclick="handleSortAsc()">low to high</button>
+        <button id="highToLow" onclick="handleSortDesc()">high to low</button>
     </div>
 
     <div class="price">
@@ -34,7 +34,8 @@
 
     <div class="category">
         <select name="showCategory" id="" onchange="handleSelect(event)" required>
-            <option value="">Show All</option>
+            <option value="" disabled selected>Choose category</option>
+            <option value="all">Show All</option>
             <option value="computers">Computers</option>
             <option value="phones">Phones</option>
         </select>
