--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/index.html
@@ -17,7 +17,7 @@
         <div class="header__wrapper">
             <div class="header__wrapper__item">CONTACT US</div>
             <div class="header__wrapper__item">+972-545123456</div>
-            <div class="header__wrapper__item">ISRAEL (USD)</div>
+            <div class="header__wrapper__item" id="currency-button">ISRAEL (USD)</div>
             <div class="header__wrapper__item">EN</div>
         </div>
         <div class="header__wrapper">
@@ -25,6 +25,12 @@
             <div class="header__wrapper__item">ACCOUNT</div>
             <div class="header__wrapper__item">CART</div>
         </div>
+    </div>
+    <div class="currency-selector">
+        <p>Please choose your prefered currency:</p>
+        <div class="currency" id="USD"><p>($) USD</p><img src="https://upload.wikimedia.org/wikipedia/en/thumb/a/a4/Flag_of_the_United_States.svg/220px-Flag_of_the_United_States.svg.png"></div>
+        <div class="currency" id="GBP"><p>(£) GBP</p><img src="https://upload.wikimedia.org/wikipedia/en/thumb/a/ae/Flag_of_the_United_Kingdom.svg/255px-Flag_of_the_United_Kingdom.svg.png"></div>
+        <div class="currency" id="EUR"><p>(€) EUR</p><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b7/Flag_of_Europe.svg/255px-Flag_of_Europe.svg.png"></div>
     </div>
     <div class="nav-bar">
         <div class="nav-bar__item">WATCHES</div>
