--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/shani try/shanicustomer.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/shani try/shanicustomer.html
@@ -19,6 +19,11 @@
         <button type="button" id="descending" onclick="handlePriceDesc()">Sort by lowest to highest</button>
     </div>
 
+    <div class="lowerThanPrice">
+        <label>Show price lower than</label>
+        <input type='number' onkeyup="handleInput(event)" placeholder="number">
+    </div>
+
     <div id="root"></div>
     <script src="dist/shanicustomer.js"></script>
 </body>
