--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/owner.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/owner.html
@@ -10,11 +10,12 @@
 </head>
 
 <body>
-    <form onsubmit="handleSubmit(event)">
+    <form  onsubmit="handleSubmit(event)">
         <input type="text" name="name" placeholder="name">
         <input type="number" name="price" placeholder="price">
         <input type="text" name="img" placeholder="img">
-        <select class="filter-dropbar__group" name="group" id="" onchange="handleSelectGroup">
+        
+        <select  name="group" id="" onchange="handleSelectGroup">
             <option value="group" disabled selected>gruop</option>
             <option value="AUTOMATIC WATCHES">AUTOMATIC WATCHES</option>
             <option value="CLASSIC WATCHES">CLASSIC WATCHES</option>
