--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/index.html
@@ -66,7 +66,7 @@
                 excellent sushi, FU is the ultimate place to be. We are open daily from 12:00 p.m to 0:00 a.m. and would
                 be happy to see you among our guests.</p>
         </div>
-        
+
         <div class="lobby__images">
             <div class="lobby__images__box">
                 <div class="lobby__images__box__image">
@@ -84,7 +84,83 @@
     </section>
 
     <section class='menu'>
+        
+        <h2 class="menu__title">Menu</h2>
+        <div class="menu__box">
+            <div class="menu__cell">
+                <img src="http://www.fusushi.co.il/warehouse/dynamic/50867.jpg" alt="">
+                <p>Soups</p>
+            </div>
+            <div class="menu__cell">
+                <img src="http://www.fusushi.co.il/warehouse/dynamic/50866.jpg" alt="">
+                <p>Salads</p>
+            </div>
+            <div class="menu__cell">
+                <img src="http://www.fusushi.co.il/warehouse/dynamic/91136.jpg" alt="">
+                <p>Ban</p>
+            </div>
+            <div class="menu__cell">
+                <img src="http://www.fusushi.co.il/warehouse/dynamic/92764.jpg" alt="">
+                <p>Robatayaki</p>
+            </div>
+            <div class="menu__cell">
+                <img src="http://www.fusushi.co.il/warehouse/dynamic/91137.jpg" alt="">
+                <p>Gyoza</p>
+            </div>
+            <div class="menu__cell">
+                <img src="http://www.fusushi.co.il/warehouse/dynamic/51708.jpg" alt="">
+                <p>Appetizers</p>
+            </div>
+            <div class="menu__cell">
+                <img src="http://www.fusushi.co.il/warehouse/dynamic/91138.jpg" alt="">
+                <p>Special Gonkanmaki</p>
+            </div>
+            <div class="menu__cell">
+                <img src="http://www.fusushi.co.il/warehouse/dynamic/51711.jpg" alt="">
+                <p>Inside Out</p>
+            </div>
+            <div class="menu__cell">
+                <img src="http://www.fusushi.co.il/warehouse/dynamic/51710.jpg" alt="">
+                <p>Specials</p>
+            </div>
+            <div class="menu__cell">
+                <img src="http://www.fusushi.co.il/warehouse/dynamic/74627.jpg" alt="">
+                <p>Kids Dishes</p>
+            </div>
+            <div class="menu__cell">
+                <img src="http://www.fusushi.co.il/warehouse/dynamic/92765.jpg" alt="">
+                <p>Main Dishes</p>
+            </div>
+            <div class="menu__cell">
+                <img src="http://www.fusushi.co.il/warehouse/dynamic/50868.jpg" alt="">
+                <p>Wok</p>
+            </div>
+            <div class="menu__cell">
+                <img src="http://www.fusushi.co.il/warehouse/dynamic/91376.jpg" alt="">
+                <p>Cokctails</p>
+            </div>
+            <div class="menu__cell">
+                <img src="http://www.fusushi.co.il/warehouse/dynamic/50881.jpg" alt="">
+                <p>Combinations</p>
+            </div>
+            <div class="menu__cell">
+                <img src="http://www.fusushi.co.il/warehouse/dynamic/50879.jpg" alt="">
+                <p>Sashimi</p>
+            </div>
+            <div class="menu__cell">
+                <img src="http://www.fusushi.co.il/warehouse/dynamic/50877.jpg" alt="">
+                <p>Nigiri</p>
+            </div>
+            <div class="menu__cell">
+                <img src="http://www.fusushi.co.il/warehouse/dynamic/50875.jpg" alt="">
+                <p>Sandwich Sushi</p>
+            </div>
+            <div class="menu__cell">
+                <img src="http://www.fusushi.co.il/warehouse/dynamic/50871.jpg" alt="">
+                <p>Maki Sushi</p>
+            </div>
 
+        </div>
     </section>
 
     <section class='popmenu'>
