--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/yahia,michael,leon/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/yahia,michael,leon/index.html
@@ -24,8 +24,8 @@
     <div class="_box">Women</div>
     <div class="_box">Kids</div>
     <div class="_box">Sale</div>
-    <input type="text" placeholder="Search">
-    <div class="_box"><i class="far fa-heart"></i>
+    <input type="text" style="position: absolute; left: 70vw;" placeholder="Search">
+    <div class="_box" style="position: absolute; left: 85vw;"><i class="far fa-heart"></i>
         <span>|</span>
         <i class="fas fa-shopping-bag"></i></div>
 </div>
