--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/yahia,michael,leon/owner.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/yahia,michael,leon/owner.html
@@ -12,6 +12,8 @@
        <input type="number" required placeholder="Price" name="price">
        <input type="submit" value="submit">
     </form>
+    <input type="submit" onclick="handleAsce(event)" name="asce" value="ascending">
+    <input type="submit" onclick="handleDesce(event)" name="desce" value="descending">
     <script src="dist/index.js"></script>
 </body>
 </html>
