--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/Gucci/marina Gucci/erp.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/Gucci/marina Gucci/erp.html
@@ -21,12 +21,13 @@
     <button onclick="handleShowProducts()">Show Products</button>
     <button onclick="handleGetProducts()">Get Products</button> -->
 
-     <form onsubmit="handleAddNewItemSubmit(event)">
-         <input id="itemName" type="text" name="title" placeholder="title">
-         <input id="price" type="number" name="price" placeholder="price">
-         <input id="price" type="text" name="category" placeholder="category">
-         <input type="submit" value="add item">
-     </form>
+    <form onsubmit="handleAddNewItemSubmit(event)">
+        <input id="itemName" type="text" name="title" placeholder="title">
+        <input id="price" type="number" name="price" placeholder="price">
+        <input id="category" type="text" name="category" placeholder="category">
+        <!-- The id was the same in price and category. This is why the price value was undefuned -->
+        <input type="submit" value="add item">
+    </form>
 
 
     <!-- <form onsubmit="handleSubmit(event)" class="lookig_for">
@@ -63,7 +64,7 @@
 
     <div id="root"></div>
     <script src="dist/gucci.js"></script>
-     
+
 </body>
 
 </html>
